internal/gatewayapi/testdata/backendtrafficpolicy-with-ratelimit-invalid-distinct-invert.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
grpcRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: GRPCRoute
  metadata:
    namespace: default
    name: grpcroute
  spec:
    parentRefs:
    - namespace: envoy-gateway
      name: gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service
        port: 8080
backendTrafficPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    namespace: envoy-gateway
    name: policy-for-gateway
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
    rateLimit:
      type: Global
      global:
        rules:
        - clientSelectors:
          - headers:
            - name: x-org-id
              type: Distinct
              invert: true
          limit:
            requests: 10
            unit: Hour
          cost:
            request:
              from: Number
              number: 1
            response:
              from: Metadata
              metadata:
                namespace: something.com
                key: some_cost_set_by_foo
